//  File: keys.proto
//  Author: Tom Roeder <tmroeder@google.com>
//
//  Description: Protocol buffers for keys and x509 certificates.
//
//  Copyright (c) 2013, Google Inc.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package tao;

message KeyczarPublicKey {
  message KeyFile {
    required int32 name = 1;
    required string data = 2;
  }

  required string metadata = 1;
  repeated KeyFile files = 2;
}

message X509Details {
  // Requested x509 CommonName detail
  optional bytes commonname = 3;

  // Requested x509 Country detail
  optional bytes country = 4;

  // Requested x509 State detail
  optional bytes state = 5;

  // Requested x509 Organization detail
  optional bytes organization = 6;
}

// A signed serialized protobuf message, including a require context to ensure
// unique deserialization.
message SignedData {
  // SECURITY WARNING: Always choose a unique context for each unique type of
  // message. One easy way to do this is to number the messages in a protocol
  // and make the context "ProtocolName Message Y: ProtobufName Version X"
  required string context = 1;

  // The serialized protobuf representing this message.
  required bytes data = 2;
}

message KeyDerivationBuffer {
  required int32 count = 1;
  required int32 index = 2;
  required string tag = 3;
}
